--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,7 +5,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1>BBQ Chicken Pizza</h1>
     <img src="../images/pizza.jpg" alt="A delicious bbq chicken pizza" height="310" width="310">
+    <h3>A delectable barbecue chicken pie</h3>
+     <p>This BBQ chicken pizza has spicy barbecue sauce, diced chicken, peppers, onion, and cilantro, all covered with cheese and baked to bubbly goodness!</p>
+     <p>This is similar to a recipe I had at a popular pizza place in California. My family loves it!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 (12 inch) pre-baked pizza crust</li>
+        <li>1 cup spicy barbecue sauce</li>
+        <li>2 skinless boneless chicken breast halves, cooked and cubed</li>
+        <li>1 cup sliced peperoncino peppers</li>
+        <li>1 cup chopped red onion</li>
+        <li>½ cup chopped fresh cilantro</li>
+        <li>2 cups shredded Colby-Jack cheese</li>
+    </ul>
 </body>
 </html>
