--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="recipes/pizza.html">Pizza</a></li>
             <li><a href="recipes/chickenkatsu.html">Chicken Katsu</a></li>
-            <li><a href="recipes/breakfastburrito.html">Breakfast Burrito</a></li>
+            <li><a href="recipes/breakfastburrito.html">Breakfast Burritos</a></li>
         </ul>
     </body>
 </html>
